--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link
+    rel="stylesheet"
+    href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+    <link rel="stylesheet" href="./assets/css/style.css" />
     <title>Aire Exec</title>
 </head>
 <header class="hero">
@@ -23,11 +27,21 @@
           <input destination="destination" id="destination" type="text" autofocus="true" class="form-input" />
           <button type="submit" class="btn">Search</button>
         </form>
+        <div class="row py-3">
+            <label for="date" class="col-sm-4 col-form-label">Departure Date: </label>
+            <div class="col-sm-8">
+              <input
+                type="text"
+                class="form-control"
+                id="datepicker"
+                autocomplete="off"
+              />
+            </div>
       </div>
 
       <div class="card">
         <h3 class="card-header">Search By Airport</h3>
-        <div id="language-buttons" class="card-body">
+        <div id="airports" class="card-body">
           <button airport-name="yyz" class="btn">YYZ-Toronto</button>
           <button airport-name="ykf" class="btn">YKF-KW Airport</button>
           <button airport-name="hlz" class="btn">HLZ-Hamilton Aiport</button>
@@ -36,14 +50,14 @@
     </div>
 
     <div class="col-12 col-md-8">
-      <h2 class="subtitle">Showing Flights for: <span id="flight-search-term"></span></h2>
+      <h2 class="subtitle">Available Flights<span id="flight-search-form"></span></h2>
       <!-- TODO: display search results-->
       <div id="flights-container" class="list-group"></div>
     </div>
-  </main>
-
-  <script src="./assets/js/script.js"></script>
-</body>
-<footer>
-</footer>
+ </main>
+ <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+ <!-- jQuery UI <script> tag -->
+ <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+    <script src="./assets/js/script.js"></script>
+    </body>
 </html>
