--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     alt="<!--alt text for image description here-->"
                 />
             </aside>
-            <div class="recent-searches">
+            <div class="search">
                 <h2> Let's find a new or favourite recipe</h2>
                 <div>
                 <!--add modal with search and filters here-->
@@ -82,12 +82,12 @@
             </div>
         </article>
 
-        <article id="images">
-            <h2>Images</h2>
+        <article id="recent-searches">
+            <h2>Recent Searches</h2>
             <div>
                 <ul>
                     <!--id attributes to provide unique identifier for element-->
-                    <li id="images">
+                    <li id="search-history">
                     </li>
                 </ul>
             </div>
