--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <link ref="tailwindcss" href="/tailwind.config.js/tailwind.config.js">
     <link href="/images/favicon.png" rel="icon" type="image/png">
@@ -13,7 +14,7 @@
     <!-- Navigation -->
     <nav class="bg-pink-800 text-white p-6">
         <div class="container mx-auto flex justify-between items-center w-[92%]">
-            <a href="/" class="text-xl font-bold">Food 4 Foodies<span class="text-yellow-300">Website</span></a>
+            <a href="/" class="text-xl font-bold">Food 4 Foodies | Recipes<span class="text-yellow-300">Website</span></a>
             <ul class="flex md:flex-row flex-col md:items-center md:gap-[4vw] gap-8">
                 <li><a href="/" class="hover:text-#ffedd5">Home</a></li>
                 <li><a href="/recipes.html" class="hover:text-yellow-400 font-bold">Recipes</a></li>
