fix merge conflicts on index.html

--- a/index.html
+++ b/index.html
@@ -4,28 +4,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<<<<<<< HEAD
     <meta name="description" content="A Recipe datbase that showcases a variety of foods for every foodie at hesrt.">
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <link ref="tailwindcss" href="/tailwind.config.js/tailwind.config.js">
     <link href="/images/favicon.png" rel="icon" type="image/png">
     <title>Food 4 Foodies | Recipes</title>
 </head>
-=======
-    
-    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
-    <link ref="tailwindcss" href="/tailwind.config.js/tailwind.config.js">
-    <link href="/images/favicon.png" rel="icon" type="image/png">
-    <link href="./Assets/style.css" rel="stylesheet">
-    <title>Food 4 Foodies</title>
-</head>
-
-<body class="font-sans bg-gray-100">
->>>>>>> main
 
 <body class="h-72 bg-gradient-to-r from-purple-600 via-pink-600 to-blue-600">
     <!-- Navigation -->
-<<<<<<< HEAD
     <nav class="bg-pink-700 text-white p-6">
         <div class="container mx-auto flex justify-between items-center w-[95%]">
             <a href="/" class="text-4xl font-bold">Food 4 Foodies<span class="text-yellow-300">Website</span></a>
@@ -34,86 +21,10 @@
                 <li><a class="hover:text-yellow-400 text-3xl font-semibold" href="#About-Us">About Us</a></li>
                 <li><a class="hover:text-yellow-400 text-3xl font-semibold" href="#Recipe-Search">Recipe Search</a></li>
                 <li><a class="hover:text-yellow-400 text-3xl font-semibold" href="#Shop-Our-Store">Shop</a></li>
-=======
-    <nav class="bg-pink-800 text-white p-6">
-        <div class="container mx-auto flex justify-between items-center w-[92%]">
-            <a href="/" class="text-xl font-bold">Food 4 Foodies | Recipes<span class="text-yellow-300">Website</span></a>
-            <ul class="flex md:flex-row flex-col md:items-center md:gap-[4vw] gap-8">
-                <li><a href="/" class="hover:text-#ffedd5">Home</a></li>
-                <li><a href="/recipes.html" class="hover:text-yellow-400 font-bold">Recipes</a></li>
-                <li><a class="hover:text-gray-500" href="#">About Us</a></li>
-                <li><a class="hover:text-gray-500" href="#">Speak To A Nutritionist</a></li>
-                <li><a class="hover:text-gray-500" href="#">Contact Us</a></li>
->>>>>>> main
             </ul>
         </div>
     </nav>
 
-<<<<<<< HEAD
-      <!-- Image Overlay -->
-      <div class="absolute inset-0 bg-black opacity-50"></div>
-      
-      <!-- Content Container -->
-      <div class="container mx-auto text-center relative z-10 text-white">
-          <h1 class="text-4xl lg:text-6xl font-bold mb-4">The Ultimate Foodie Experience</h1><br><br>
-          <a href="/recipes.html" class="bg-white text-blue-500 px-8 py-3 rounded-full inline-block font-semibold hover:bg-blue-900 hover:text-white">Search Recipes</a>
-      </div>
-  </section>
-
-  <div id="About-Us" class="overflow-hidden bg-white py-24 sm:py-32">
-    <div class="mx-auto max-w-7xl px-6 lg:px-8">
-      <div class="mx-auto grid max-w-2xl grid-cols-1 gap-x-8 gap-y-16 sm:gap-y-20 lg:mx-0 lg:max-w-none lg:grid-cols-2">
-        <div class="lg:pr-8 lg:pt-4">
-          <div class="lg:max-w-lg">
-            <p class="mt-2 text-3xl font-bold tracking-tight text-blue-900 sm:text-4xl">Release Your Inner Foodie</p>
-            <p class="mt-6 text-lg leading-8 text-blue-900">Food 4 Foodie's provides access to a food and grocery database that serves as the ultimate Foodie's dream, with close to 900,000 basic foods, nutritional information and and in-depth ingredient lists complete with filters for specific dietary needs.
-            </p>
-            <dl class="mt-10 max-w-xl space-y-8 text-base leading-7 text-gray-900 lg:max-w-none">
-              <div class="relative pl-9">
-                <dt class="inline font-semibold text-black-900 text-1xl">
-                  <svg class="absolute left-1 top-1 h-5 w-5 text-blue-900" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
-                    <path fill-rule="evenodd" d="M5.5 17a4.5 4.5 0 01-1.44-8.765 4.5 4.5 0 018.302-3.046 3.5 3.5 0 014.504 4.272A4 4 0 0115 17H5.5zm3.75-2.75a.75.75 0 001.5 0V9.66l1.95 2.1a.75.75 0 101.1-1.02l-3.25-3.5a.75.75 0 00-1.1 0l-3.25 3.5a.75.75 0 101.1 1.02l1.95-2.1v4.59z" clip-rule="evenodd" />
-                  </svg>
-                  Database Optimization.
-                </dt>
-                <dd class="inline">This is one of the ultimate cooking database. There are multiple skill level choices from beginner to intermediate, baking ideas, meal plans, and expert culinary tips available.</dd>
-              </div>
-              <div class="relative pl-9">
-                <dt class="inline font-semibold text-black-900">
-                  <svg class="absolute left-1 top-1 h-5 w-6 text-blue-900" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
-                    <path fill-rule="evenodd" d="M10 1a4.5 4.5 0 00-4.5 4.5V9H5a2 2 0 00-2 2v6a2 2 0 002 2h10a2 2 0 002-2v-6a2 2 0 00-2-2h-.5V5.5A4.5 4.5 0 0010 1zm3 8V5.5a3 3 0 10-6 0V9h6z" clip-rule="evenodd" />
-                  </svg>
-                  Smart Design.
-                </dt>
-                <dd class="inline">Food 4 foodie's is a smart recipe database that is designed personally for to enhace the User's experience. The app suggests the recipes with the help of the AI. You can set your diet preferences and receive recommendations from the app.</dd>
-              </div>
-              <div class="relative pl-9">
-                <dt class="inline font-semibold text-gray-900">
-                  <svg class="absolute left-1 top-1 h-5 w-5 text-blue-900" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
-                    <path d="M4.632 3.533A2 2 0 016.577 2h6.846a2 2 0 011.945 1.533l1.976 8.234A3.489 3.489 0 0016 11.5H4c-.476 0-.93.095-1.344.267l1.976-8.234z" />
-                    <path fill-rule="evenodd" d="M4 13a2 2 0 100 4h12a2 2 0 100-4H4zm11.24 2a.75.75 0 01.75-.75H16a.75.75 0 01.75.75v.01a.75.75 0 01-.75.75h-.01a.75.75 0 01-.75-.75V15zm-2.25-.75a.75.75 0 00-.75.75v.01c0 .414.336.75.75.75H13a.75.75 0 00.75-.75V15a.75.75 0 00-.75-.75h-.01z" clip-rule="evenodd" />
-                  </svg>
-                  Smart Search
-                </dt>
-                <dd class="inline">The Smart Search feature also shows autosuggestion and is able to search recipes by characteristics (such as low-carb, gluten-free, etc.)</dd>
-              </div>
-            </dl>
-          </div>
-        </div>
-        <video width="640" height="360" controls autoplay loop muted>
-            <source src="Food4foodies-vid.mp4" type="video/mp4">
-        </video>
-      </div>
-    </div>
-  </div>
-
-     <!-- Main Content (Recipes) -->
-    <section class="container mx-auto my-16">
-        <h1 class="mt-2 text-3xl font-bold tracking-tight text-white sm:text-4xl mb-12">Top Searched Recipes</h1>
-
-        <!-- Recipe Cards -->
-        <div id="#Recipe-Search" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
-=======
     <!-- Hero Section with Image and Overlay -->
     <section class="relative h-screen flex items-center justify-center overflow-hidden">
         <!-- Image Container -->
@@ -128,10 +39,58 @@
         <div class="container mx-auto text-center relative z-10 text-white">
             <h1 class="text-4xl lg:text-6xl font-bold mb-4">The Ultimate Foodie Experience</h1><br><br>
             <a href="/recipes.html"
-                class="bg-white text-blue-500 px-8 py-3 rounded-full inline-block font-semibold hover:bg-blue-600 hover:text-white">Search
-                Recipes</a>
+                class="bg-white text-blue-500 px-8 py-3 rounded-full inline-block font-semibold hover:bg-blue-600 hover:text-white">
+                Search Recipes
+            </a>
         </div>
     </section>
+
+    <div id="About-Us" class="overflow-hidden bg-white py-24 sm:py-32">
+        <div class="mx-auto max-w-7xl px-6 lg:px-8">
+            <div class="mx-auto grid max-w-2xl grid-cols-1 gap-x-8 gap-y-16 sm:gap-y-20 lg:mx-0 lg:max-w-none lg:grid-cols-2">
+                <div class="lg:pr-8 lg:pt-4">
+                    <div class="lg:max-w-lg">
+                        <p class="mt-2 text-3xl font-bold tracking-tight text-blue-900 sm:text-4xl">Release Your Inner Foodie</p>
+                        <p class="mt-6 text-lg leading-8 text-blue-900">Food 4 Foodie's provides access to a food and grocery database that serves as the ultimate Foodie's dream, with close to 900,000 basic foods, nutritional information and and in-depth ingredient lists complete with filters for specific dietary needs.
+                        </p>
+                        <dl class="mt-10 max-w-xl space-y-8 text-base leading-7 text-gray-900 lg:max-w-none">
+                            <div class="relative pl-9">
+                                <dt class="inline font-semibold text-black-900 text-1xl">
+                                <svg class="absolute left-1 top-1 h-5 w-5 text-blue-900" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+                                    <path fill-rule="evenodd" d="M5.5 17a4.5 4.5 0 01-1.44-8.765 4.5 4.5 0 018.302-3.046 3.5 3.5 0 014.504 4.272A4 4 0 0115 17H5.5zm3.75-2.75a.75.75 0 001.5 0V9.66l1.95 2.1a.75.75 0 101.1-1.02l-3.25-3.5a.75.75 0 00-1.1 0l-3.25 3.5a.75.75 0 101.1 1.02l1.95-2.1v4.59z" clip-rule="evenodd" />
+                                </svg>
+                                Database Optimization.
+                                </dt>
+                                <dd class="inline">This is one of the ultimate cooking database. There are multiple skill level choices from beginner to intermediate, baking ideas, meal plans, and expert culinary tips available.</dd>
+                            </div>
+                            <div class="relative pl-9">
+                                <dt class="inline font-semibold text-black-900">
+                                <svg class="absolute left-1 top-1 h-5 w-6 text-blue-900" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+                                    <path fill-rule="evenodd" d="M10 1a4.5 4.5 0 00-4.5 4.5V9H5a2 2 0 00-2 2v6a2 2 0 002 2h10a2 2 0 002-2v-6a2 2 0 00-2-2h-.5V5.5A4.5 4.5 0 0010 1zm3 8V5.5a3 3 0 10-6 0V9h6z" clip-rule="evenodd" />
+                                </svg>
+                                Smart Design.
+                                </dt>
+                                <dd class="inline">Food 4 foodie's is a smart recipe database that is designed personally for to enhace the User's experience. The app suggests the recipes with the help of the AI. You can set your diet preferences and receive recommendations from the app.</dd>
+                            </div>
+                            <div class="relative pl-9">
+                                <dt class="inline font-semibold text-gray-900">
+                                <svg class="absolute left-1 top-1 h-5 w-5 text-blue-900" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+                                    <path d="M4.632 3.533A2 2 0 016.577 2h6.846a2 2 0 011.945 1.533l1.976 8.234A3.489 3.489 0 0016 11.5H4c-.476 0-.93.095-1.344.267l1.976-8.234z" />
+                                    <path fill-rule="evenodd" d="M4 13a2 2 0 100 4h12a2 2 0 100-4H4zm11.24 2a.75.75 0 01.75-.75H16a.75.75 0 01.75.75v.01a.75.75 0 01-.75.75h-.01a.75.75 0 01-.75-.75V15zm-2.25-.75a.75.75 0 00-.75.75v.01c0 .414.336.75.75.75H13a.75.75 0 00.75-.75V15a.75.75 0 00-.75-.75h-.01z" clip-rule="evenodd" />
+                                </svg>
+                                Smart Search
+                                </dt>
+                                <dd class="inline">The Smart Search feature also shows autosuggestion and is able to search recipes by characteristics (such as low-carb, gluten-free, etc.)</dd>
+                            </div>
+                        </dl>
+                    </div>
+                </div>
+                <video width="640" height="360" controls autoplay loop muted>
+                    <source src="Food4foodies-vid.mp4" type="video/mp4">
+                </video>
+            </div>
+        </div>
+    </div>
 
     <!-- Main Content (Recipes) -->
     <section class="container mx-auto my-8">
@@ -142,31 +101,7 @@
 
         <!-- Recipe Cards -->
         <div id="recipeCards" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
->>>>>>> main
-            <!-- Recipe Card 1 -->
-            <!--<div id="breakfastCard" class="bg-white p-4 shadow">
-                <img src="/images/breakfast-1.jpg" alt="Breakfast Image"
-                    class="w-full h-38 object-cover mb-4 rounded-lg">
-                <h2 class="text-xl font-bold mb-2">Breakfast / Brunch Ideas</h2>
-                <p class="text-gray-600 mb-4">A refreshing salad with ripe avocados, tomatoes, and greens.</p>
-                <button href="#" class="text-pink-500 hover:underline font-semibold" id="breakfastSearch">View
-                    Recipes</button>
-            </div> -->
-            <!-- Recipe Card 2 -->
-            <!-- <div class="bg-white p-4 shadow">
-                <img src="/images/lunch.jpg" alt="Lunch Image" class="w-full h-38 object-cover mb-4 rounded-lg">
-                <h2 class="text-xl font-bold mb-2">Lunch Ideas</h2>
-                <p class="text-gray-600 mb-4">A protein-packed bowl with quinoa, vegetables, and a tahini dressing.</p>
-                <a href="#" class="text-pink-500 hover:underline font-semibold">View Recipes</a>
-            </div> -->
-            <!-- Recipe Card 3 -->
-            <!--
-            <div class="bg-white p-4 shadow">
-                <img src="images/dinner-3.jpg" alt="Dinner Image" class="w-full h-38 object-cover mb-4 rounded-lg">
-                <h2 class="text-xl font-bold mb-2">Dinner Delights</h2>
-                <p class="text-gray-600 mb-4">A nutritious green smoothie with spinach, banana, and almond milk.</p>
-                <a href="#" class="text-pink-500 hover:underline font-semibold">View Recipes</a>
-            </div> -->
+        </div>
     </section>
 
     <!-- Foodie Shop -->
@@ -215,7 +150,7 @@
             </div>
           </div>
         </div>
-      </div>
+    </div>
 
     <!-- Footer -->
     <footer class="bg-pink-800 text-white font-bold text-3xl p-12">
@@ -223,10 +158,7 @@
             <p>&copy; 2023 Food 4 Foodies Website. Team-8.</p>
         </div>
     </footer>
-<<<<<<< HEAD
-=======
     <script src="./Assets/script.js"></script>
->>>>>>> main
 </body>
 
 </html>
