--- a/index.html
+++ b/index.html
@@ -17,11 +17,9 @@
       <div class="container mx-auto flex justify-between items-center w-[95%]">
           <img src="images/v-logo.png">
           <ul class="flex md:flex-row flex-col md:items-center md:gap-[4vw] gap-8">
-              <li><a href="/" class="hover:text-yellow-400 text-2xl font-semibold" href="#">Home</a></li>
               <li><a class="hover:text-yellow-400 text-2xl font-semibold" href="#About-Us">About Us</a></li>
               <li><a class="hover:text-yellow-400 text-2xl font-semibold" href="#Recipe-Search">Recipe Search</a></li>
               <li><a class="hover:text-yellow-400 text-2xl font-semibold" href="#Shop-Products">Shop</a></li>
-              <li><a class="hover:text-yellow-400 text-2xl font-semibold" href="#">Get in Touch</a></li>
           </ul>
       </div>
     </nav>
@@ -39,9 +37,10 @@
         <!-- Content Container -->
         <div class="container mx-auto text-center relative z-10 text-white">
             <h1 class="text-4xl lg:text-6xl font-bold mb-4">The Ultimate Foodie Experience</h1><br><br>
-            <div id="Recipe-Search"
+            <div
                 class="bg-white text-blue-500 px-8 py-3 rounded-full inline-block font-semibold hover:bg-blue-600 hover:text-white">
-                Search Recipes>
+                <a href="#Recipe-Search">Search Recipes</a> 
+            </div>
         </div>
     </section>
 
@@ -93,7 +92,7 @@
     </div>
 
     <!-- Main Content (Recipes) -->
-    <section class="container mx-auto my-16">
+    <section id="Recipe-Search"class="container mx-auto my-16">
       <h1 class="mt-2 text-3xl font-bold tracking-tight text-white sm:text-4xl mb-12">Top Searched Recipes</h1>
         <button onclick="getRecipe('breakfast')" href="#" class="text-pink-500 hover:underline font-semibold meal" id="breakfastSearch">Breakfast</button>
         <button onclick="getRecipe('lunch')" href="#" class="text-pink-500 hover:underline font-semibold meal" id="lunchSearch">Lunch</button>
@@ -105,7 +104,7 @@
     </section>
     </div>
     <!-- Foodie Shop -->
-    <div id="Shop-Our-Store" class="bg-gray-100">
+    <div id="Shop-Products" class="bg-gray-100">
         <div class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8">
           <div class="mx-auto max-w-2xl py-16 sm:py-24 lg:max-w-none lg:py-32">
             <h1 class="mt-4 text-3xl font-bold tracking-tight text-blue-900 sm:text-4xl mb-12">Coming Soon... Shop Foodie Products</h1>
