--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@
         <button onclick="getRecipe('breakfast')" href="#" class="text-pink-500 hover:underline font-semibold meal" id="breakfastSearch">Breakfast</button>
         <button onclick="getRecipe('lunch')" href="#" class="text-pink-500 hover:underline font-semibold meal" id="lunchSearch">Lunch</button>
         <button onclick="getRecipe('dinner')" href="#" class="text-pink-500 hover:underline font-semibold meal" id="dinnerSearch">Dinner</button>
+        <button onclick="getCanadian('canadian')" href="#" class="text-pink-500 hover:underline font-semibold meal" id="dinnerSearch">Canadian</button>
 
         <!-- Recipe Cards -->
         <div id="recipeCards" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
