--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
       <!-- Recipe Card-1: (Breakfast / Brunch) -->
       <div class="mt-8 grid lg:grid-cols-4 gap-x-8">
           <div id="Recipe-Search" class="bg-white p-4 shadow">
-            <img src="/images/breakfast-1.jpg" alt="Eggs with toast and tomatoes" class="w-full h-32 sm:h-48 object-cover">
+            <img src="images/breakfast-1.jpg" alt="Eggs with toast and tomatoes" class="w-full h-32 sm:h-48 object-cover">
               <div class="m-4">
                 <span class="text-2xl font-bold mb-2">Breakfast / Brunch Recipes</span>
               </div>
@@ -99,7 +99,7 @@
         
           <!-- Recipe Card-2: (Lunch) -->
           <div id="Recipe-Search" class="bg-white p-4 shadow">
-            <img src="/images/lunch.jpg" alt="Chicken salad" class="w-full h-32 sm:h-48 object-cover">
+            <img src="images/lunch.jpg" alt="Chicken salad" class="w-full h-32 sm:h-48 object-cover">
               <div class="m-4">
                 <span class="text-2xl font-bold mb-2">Lunch Recipes</span>
               </div>
@@ -107,7 +107,7 @@
           </div>
           <!-- Recipe Card-3: (Dinner) -->
           <div id="Recipe-Search" class="bg-white p-4 shadow">
-            <img src="/images/dinner-3.jpg" alt="Salmon with vegetables and lemon" class="w-full h-32 sm:h-48 object-cover">
+            <img src="images/dinner-3.jpg" alt="Salmon with vegetables and lemon" class="w-full h-32 sm:h-48 object-cover">
               <div class="m-4">
                 <span class="text-2xl font-bold mb-2">Dinner Recipes</span>
               </div>
@@ -116,7 +116,7 @@
         
           <!-- Recipe Card-4: (Local Canadian) -->
           <div id="Recipe-Search" class="bg-white p-4 shadow">
-            <img src="/images/Canadian-flag.png" alt="Woman holding Canadian flag" class="w-full h-32 sm:h-48 object-cover">
+            <img src="images/Canadian-flag.png" alt="Woman holding Canadian flag" class="w-full h-32 sm:h-48 object-cover">
               <div class="m-4">
                 <span class="text-2xl font-bold mb-2">Canadian Recipes</span>
               </div>
