corrected spelling errors and about us section

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                               </svg>
                               Smart Search.
                               </dt>
-                              <dd class="inline text-lg leading-8 text-blue-900">Food 4 foodie's is a smart recipe database that is designed personally for to enhace the User's experience. You can set your diet preferences and receive recommendations. The Smart Search feature also shows autosuggestion and is able to search recipes by categories and you save your favorite recipes online.</dd>
+                              <dd class="inline text-lg leading-8 text-blue-900">Food 4 foodie's is a smart recipe database that is designed personally for to enhance the User's experience. You can set your diet preferences and receive recommendations. The Smart Search feature also shows autosuggestion and is able to search recipes by categories and you save your favorite recipes online.</dd>
                           </div>
                       </dl>
                   </div>
