cleaned up extra link

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
         <button onclick="getRecipe('breakfast')" href="#" class="text-pink-700 hover:underline text-2xl font-bold mb-2 p-4 mt-8" id="breakfastSearch"></button>
         <button onclick="getRecipe('lunch')" href="#" class="text-pink-700 hover:underline text-2xl font-bold mb-2 p-4 mt-8" id="lunchSearch"></button>
         <button onclick="getRecipe('dinner')" href="#" class="text-pink-700 hover:underline text-2xl font-bold mb-2 p-4 mt-8" id="dinnerSearch"></button>
-        <button onclick="getCanadian('canadian')" href="#" class="text-pink-700 hover:underline text-2xl font-bold mb-2 p-4 mt-8" id="dinnerSearch">Canadian</button>       
+        <button onclick="getCanadian('canadian')" href="#" class="text-pink-700 hover:underline text-2xl font-bold mb-2 p-4 mt-8" id="dinnerSearch"></button>       
         </div>
       </section>
     </div>
